# mlops_actions

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-publish.yml  terraform_validate.yml
docs/: taller_terraform_ml.md
infra/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/data_layer/: variables.tf  volumes_network.tf
infra/modules/ml_training/: image.tf  train_container.tf  variables.tf
src/ml_pipeline_titanic/: __init__.py  cli.py  pipeline.py  pyproject.toml
